// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`colorProfile renders 0 1`] = `
Array [
  .c0 {
  color-profile: 0;
}

<div
    className="c0"
  />,
  .c0 {
  color-profile: 0;
}

<div
    className="c0"
  />,
  .c0 {
  color-profile: 0;
}

<div
    className="c0"
  />,
  .c0 {
  color-profile: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`colorProfile renders function 1`] = `
Array [
  .c0 {
  color-profile: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  color-profile: has;
}

<div
    className="c0"
  />,
  .c0 {
  color-profile: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  color-profile: has;
}

<div
    className="c0"
  />,
]
`;

exports[`colorProfile renders invalid theme path 1`] = `
Array [
  .c0 {
  color-profile: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  color-profile: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  color-profile: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  color-profile: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`colorProfile renders negative number 1`] = `
Array [
  .c0 {
  color-profile: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  color-profile: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  color-profile: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  color-profile: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`colorProfile renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    color-profile: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    color-profile: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    color-profile: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    color-profile: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    color-profile: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    color-profile: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    color-profile: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    color-profile: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    color-profile: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    color-profile: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    color-profile: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    color-profile: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    color-profile: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    color-profile: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    color-profile: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    color-profile: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`colorProfile renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    color-profile: July;
  }
}

@media April {
  .c0 {
    color-profile: August;
  }
}

@media January {
  .c0 {
    color-profile: September;
  }
}

@media April {
  .c0 {
    color-profile: November;
  }
}

@media June {
  .c0 {
    color-profile: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    color-profile: July;
  }
}

@media April {
  .c0 {
    color-profile: August;
  }
}

@media January {
  .c0 {
    color-profile: September;
  }
}

@media April {
  .c0 {
    color-profile: November;
  }
}

@media June {
  .c0 {
    color-profile: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    color-profile: January;
  }
}

@media April {
  .c0 {
    color-profile: December;
  }
}

@media January {
  .c0 {
    color-profile: April;
  }
}

@media April {
  .c0 {
    color-profile: May;
  }
}

@media June {
  .c0 {
    color-profile: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    color-profile: January;
  }
}

@media April {
  .c0 {
    color-profile: December;
  }
}

@media January {
  .c0 {
    color-profile: April;
  }
}

@media April {
  .c0 {
    color-profile: May;
  }
}

@media June {
  .c0 {
    color-profile: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`colorProfile renders postitive number 1`] = `
Array [
  .c0 {
  color-profile: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  color-profile: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  color-profile: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  color-profile: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`colorProfile renders string 1`] = `
Array [
  .c0 {
  color-profile: July;
}

<div
    className="c0"
  />,
  .c0 {
  color-profile: July;
}

<div
    className="c0"
  />,
  .c0 {
  color-profile: June;
}

<div
    className="c0"
  />,
  .c0 {
  color-profile: June;
}

<div
    className="c0"
  />,
]
`;

exports[`colorProfile renders valid theme path 1`] = `
Array [
  .c0 {
  color-profile: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  color-profile: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  color-profile: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  color-profile: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
